projects/compiler/test/typechecker/binary/coalesce_error.3.out
Error at %FILE_NAME%:1:5
Illegal operator
  |  123 ?: 456
         ^
The '?:' operator can only be used on an Option type
(The lhs value's type here is Int, not Option<Int>)
